--- a/Lab-1/Aniflix.com/style.css
+++ b/Lab-1/Aniflix.com/style.css
@@ -21,6 +21,14 @@ body {
 }
 header{
     background-color: transparent;
-    color
+    color: #fff;
+	text-decoration: none;
+	
 
+}
+header > img{
+	width: 50px;
+	height: 50px;
+	align-self: left;
+	background-color: black;
 }
